# MedLlama

./: .gitignore  README.md  pyproject.toml
configs/: medllama-rag-config.yaml  medllama-serving-config.yaml  medllama-training-dpo.yaml  medllama-training-sft.yaml
docker/: Dockerfile.serve
result/demo/: medllama-demo-outputs.md  medllama-demo-outputs.md.gpg
result/eval/: medllama-llmjudge-results.json  medllama-llmjudge-results.json.gpg  medllama-medqa-results.json  medllama-medqa-results.json.gpg  medllama-rag-results.json  medllama-rag-results.json.gpg
result/figure/exp1/: medllama-architecture.drawio.xml  medllama-architecture.drawio.xml.gpg
scripts/: start-qdrant.sh
src/data_prep/: medllama-dpo-format.py  medllama-pubmed-ingest.py  medllama-sft-format.py
src/eval/: medllama-llmjudge-evaluate.py  medllama-medical-evaluate.py  medllama-rag-evaluate.py
src/rag/: medllama-embedding-generate.py  medllama-hybrid-retrieve.py  medllama-qdrant-store.py  medllama-rag-orchestrate.py
src/serving/: medllama-api-serve.py  medllama-demo-generate.py  medllama-schema-define.py  medllama-sse-stream.py  run.py
src/training/: medllama-adapter-merge.py  medllama-dpo-train.py  medllama-sft-train.py
test/: test_medllama_api.py  test_medllama_integration.py  test_medllama_rag.py
