[project]
name = "medllama"
version = "0.1.0"
description = "Healthcare LLM with RAG pipeline for medical question answering"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    # Serving
    "vllm>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    # RAG
    "qdrant-client>=1.8.0",
    "sentence-transformers>=2.6.0",
    "FlagEmbedding>=1.2.0",
    # Data
    "biopython>=1.83",
    # Eval & Logging
    "wandb>=0.16.0",
    "scikit-learn>=1.4.0",
    # Utils
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
